# point-viz

./: .gitignore  CMakeLists.txt
assets/shaders/: point_shader.fs  point_shader.vs
point_visualizer/: CMakeLists.txt  point_visualizer.cxx
src/: camera.h  main.cpp  pointcloud.cpp  pointcloud.h
